fix aligning

--- a/assets/site.scss
+++ b/assets/site.scss
@@ -122,12 +122,12 @@ body {
 		}
 	}
 
-	.stack {
-		img {
-			margin-top: 0px;
-			margin-bottom: 8px;
-		}
-	}
+	// .stack {
+	//   img {
+	//     margin-top: 0px;
+	//     margin-bottom: 8px;
+	//   }
+	// }
 
 	.compliance {
 		.card-body {
